# Django_22.1

./: pyproject.toml
catalog/: forms.py  models.py  views.py
catalog/templates/catalog/: base.html  index.html
catalog/templates/catalog/includes/: inc_product.html
config/: settings.py
