[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["Mark Pochivalov <pochivalov.mark@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
pillow = "^9.5.0"
ipython = "^8.14.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
